--- a/references/_posts/2015-12-22-Ref4.md
+++ b/references/_posts/2015-12-22-Ref4.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title:  "Ref 4"
+title:  "Ecole du bois"
 date:   2015-12-22 16:34:53 +0100
-thumb: http://placehold.it/400x400
+thumb: /img/logo-esb.png
 ---
 
-Ref
+![logo]({{ page.thumb }})
+
+[Accès au site](http://www.ecoledubois.fr/)
