--- a/collections/_references/2015-12-22-IMS.md
+++ b/collections/_references/2015-12-22-IMS.md
@@ -3,6 +3,7 @@ layout: post
 title:  "IMS - Université de Bordeaux"
 date:   2015-12-22 16:34:53 +0100
 thumb: /img/logo-ims.png
+link: http://www.ims-bordeaux.fr/fr/
 ---
 ![logo]({{ page.thumb }})
 
