--- a/collections/_references/2015-12-22-KBS.md
+++ b/collections/_references/2015-12-22-KBS.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Kedge Business School Bordeaux"
 date:   2015-12-22 16:34:53 +0100
 thumb: /img/Logo-kedge.JPG
+link: http://www.kedgebs.com/fr
 ---
 
 ![logo]({{ page.thumb }})
