--- a/collections/_references/2015-12-22-Ref4.md
+++ b/collections/_references/2015-12-22-Ref4.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Ecole du bois"
 date:   2015-12-22 16:34:53 +0100
 thumb: /img/logo-esb.png
+link: http://www.ecoledubois.fr/
 ---
 
 ![logo]({{ page.thumb }})
