--- a/collections/_references/2015-12-23-FLC.md
+++ b/collections/_references/2015-12-23-FLC.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Forêt Logistique Conseil"
 date:   2015-12-23 16:34:53 +0100
 thumb: /img/logo-FLC.png
+link: http://foretlogistique.eu
 ---
 
 ![logo]({{ page.thumb }})
