--- a/collections/_technologies/2016-07-01-anfor.md
+++ b/collections/_technologies/2016-07-01-anfor.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "ANFOR : Analysez vos données Forestières"
+level: 1
 date:   2016-07-01 16:34:53 +0100
 thumb: /img/techno-illustration_anfor_stock.png
 illustration1: /img/techno-illustration_anfor_plan.png
