--- a/collections/_references/2015-12-22-Ref4.md
+++ b/collections/_references/2015-12-22-Ref4.md
@@ -6,6 +6,6 @@ thumb: /img/logo-esb.png
 link: http://www.ecoledubois.fr/
 ---
 
-![logo]({{ page.thumb }})
+![logo]({{page.thumb}}){:img-fluid}
 
 [Accès au site](http://www.ecoledubois.fr/)
