--- a/collections/_xylosuite/2021-12-22-stocks.md
+++ b/collections/_xylosuite/2021-12-22-stocks.md
@@ -7,7 +7,7 @@ date: 2019-12-01 16:34:53 +0100
 thumb: /img/xylosuite.png
 description: "Logiciel de gestion des stocks de bois bord de route"
 stocks: /img/techno-stocks.jpg
-excerpt: "Logiciel de gestion des stocks de bois bord de route"
+excerpt: "Logiciel de suivi et de prévision des stocks de bois bord de route"
 specs:
   - Analyse des stocks en temps réel
   - Cartographie des stocks
@@ -18,6 +18,8 @@ specs:
 ![xylosuite logo]({{page.thumb}}){: .img-fluid .img-logo}
 
 ### <a href='./intro#applis' class="text-dark"><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
+{: .xylosuite-title}
+<strong>{{ page.excerpt }} </strong>
 {: .xylosuite-title}
 
 <ul class="list-group my-4">
