--- a/collections/_xylosuite/2022-12-22-terrain.md
+++ b/collections/_xylosuite/2022-12-22-terrain.md
@@ -26,7 +26,7 @@ specs:
 
 ### <a href='./intro#applis' class="text-dark"><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
 {: .xylosuite-title}
-<strong>{{ page.excerpt }} </strong>
+##### <strong>{{ page.excerpt }} </strong>
 {: .xylosuite-title}
 
 <div class="container p-0 mt-4">
