--- a/collections/_xylosuite/2023-12-22-achat.md
+++ b/collections/_xylosuite/2023-12-22-achat.md
@@ -24,7 +24,7 @@ specs:
 
 ### <a href='./intro#applis' class="text-dark"><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
 {: .xylosuite-title}
-<strong>{{ page.excerpt }} </strong>
+##### <strong>{{ page.excerpt }} </strong>
 {: .xylosuite-title}
 (développement en cours)
 
