--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -38,7 +38,7 @@ excerpt: |
   </div>
   <div itemprop="abstract">
     <p class="lead">
-      Depuis 2017, cette suite logicielle est mise à disposition de nos clients et apporte des solutions concrètes aux problèmes rencontrés à l’achat des bois sur pied, en exploitation forestière et dans le transport jusqu'aux sites de transformation.
+      Depuis 2017, cette suite logicielle est mise à disposition de nos clients <strong>exploitants forestiers</strong> ou <strong>industriels de la première transformation</strong>. Elle apporte des solutions concrètes aux problèmes rencontrés à l’achat des bois sur pied, en exploitation forestière et dans le transport jusqu'aux sites de transformation.
     </p>
   </div>
   <div>
@@ -112,8 +112,11 @@ excerpt: |
   </p>
 </div>
 
-## 6 applications interconnectées
+
+## L'innovation logicielle au service de l'exploitation forestière
 {: .xylosuite-title #applis}
+#### 6 applications interconnectées
+{: .xylosuite-title .mb-4}
 
 <div class="jumbotron py-4">
   <p class="lead mb-0">
