optimize mobile disp

--- a/collections/_actus/2019-12-20-bilan-2019.md
+++ b/collections/_actus/2019-12-20-bilan-2019.md
@@ -16,32 +16,32 @@ tags:
 <div itemscop itemtype="http://schema.org/TechArticle">
   <div itemprop="backstory">
     <p>
-      2019 a été une année d'enrichissement de nos outils et d'intégration de nouveaux clients. 
+      <strong>2019 a été une année d'enrichissement de notre suite logicielle <a href="/xylosuite/intro">Xylosuite</a> et d'intégration de nouveaux clients.</strong> 
     </p><p>
-      Nous avons comme prévu développé le module transport et réalisé sa mise en production, en particulier l'outil d'aide à la création de commandes de transport.
+      Nous avons comme prévu développé le module transport et réalisé sa mise en production, en particulier <strong>l'outil d'aide à la création de commandes de transport.</strong>
     </p> 
   </div>
   <div itemprop="articleBody">
     <p>
-      Cet outil unique permet de construire rapidement une commande de transport en facilitant la recherche des stocks pour répondre au mieux aux commandes des clients. Sa force réside dans un système de recherche des stocks suivant leur typologie (produits, origines) et leur position géographique. Deux clics suffisent à ajouter une ligne à votre commande. Les stocks s'actualisent automatiquement permettant de contrôler l'impact des transports à venir instantanément.
+      Cet outil unique permet de <strong>construire rapidement une commande de transport en facilitant la recherche des stocks pour répondre au mieux aux commandes des clients.</strong> Sa force réside dans un système de recherche des stocks suivant leur typologie (produits, origines) et leur position géographique. Deux clics suffisent à ajouter une ligne à votre commande. Les stocks s'actualisent automatiquement permettant de contrôler l'impact des transports à venir instantanément.
       </p><p>
-        L'application transport permet également de suivre les activités liées à chaque client et à chaque transporteur permettant une meilleure maîtrise des livraisons en cours.
+        L'application transport permet également de <strong>suivre les activités liées à chaque client et à chaque transporteur de bois</strong> permettant une meilleure maîtrise des livraisons en cours.
       </p><p>
         Malheureusement nous avons dû repoussé le développement de l'application à destination des transporteurs qui doit permettre la transmission des commandes de transport et remonter en temps réel les acquittements de chargement. Ce report est dû à la nécessité de créer un outil intermédiaire permettant à chaque transporteur d'affecter les commandes reçues à ses conducteurs. Le donneur d'ordre n'ayant pas la maîtrise sur les camions qui seront utilisés.
       </p><p>
         Cependant, 2019 a aussi vu l'intégration de deux outils critiques :
         <ul>
           <li>
-            la connexion aux données du cadastre, permettant la recherche de parcelles et leur détourage automatique en 1 clic,
+            <strong>la connexion aux données du cadastre,</strong> permettant la recherche de parcelles et leur détourage automatique en 1 clic,
           </li>
           <li>
-            l'assistant à la création d'instructions de production à destination des ETF, permettant un cadancement précis de l'abattage et du débardage, tenant compte des stocks en cours, du stock sur pied initial et des capacités de production des engins.
+            <strong>l'assistant à la création d'instructions de production à destination des ETF</strong>, permettant un cadancement précis de l'abattage et du débardage, tenant compte des stocks en cours, du stock sur pied initial et des capacités de production des engins.
           </li>
         </ul>
       </p><p>
-        En cette fin d'année, nous avons démarré le développement du module achat dont les premières versions seront testées fin janvier 2020.
+        En cette fin d'année, <strong>nous avons démarré le développement du module achat des bois sur pied</strong> dont les premières versions seront testées fin janvier 2020.
       </p><p>
-        2020 sera consacrée à la finalisation de ce module (en particulier le développement de son volet stratégique), à l'intégration d'un module d'analyse économique des activités et au développement de l'application à destination des transporteurs.
+        2020 sera consacrée à la finalisation de ce module (en particulier le développement de son volet stratégique), à l'intégration d'<strong>un module d'analyse économique de l'approvisionnement en bois</strong> et au développement de l'<strong>application à destination des transporteurs</strong>.
     </p>
   </div>
 </div>
