--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -6,19 +6,26 @@ date: 2019-12-01 16:34:53 +0100
 thumb: /img/xylosuite.png
 description: "Logiciel d'exploitation forestière, applications pour l'approvisionnement en bois"
 illustration1: /img/techno-metier_xylosuite.png
+illustration2: /img/techno-processus.png
+illustration3: /img/techno-no_network.svg
+illustration4: /img/ponsse.jpg
+illustration5: /img/log_air.jpg
+illustration6: /img/techno-appli_terrain.png
+logo_rails: /img/logo-rails.png
+logo_docker: /img/logo-docker.png
+logo_reactjs: /img/logo-react.png
 carte_chantier: /img/techno-carto_chantier.png
 stocks: /img/techno-stocks.jpg
 saisie_inventaire: /img/techno-appli_terrain.png
 login_pwd: /img/techno-login_pwd.png
-excerpt: |
+subtitle: |
   Une solution complète pour 
   planifier – piloter – maîtriser l’approvisionnement en bois rond
 ---
 
 ![xylosuite logo]({{page.thumb}}){: .img-thumbnail}
 
-
-## Une solution complète pour 
+## Une solution complète pour
 {: .xylosuite-title .mb-0}
 ## **planifier – piloter – maîtriser**
 {: .xylosuite-title .mb-0}
@@ -59,14 +66,29 @@ excerpt: |
     Nous exploitons <strong>les technologies web les plus récentes </strong>afin de vous mettre à disposition <strong>des applications accessibles sur tout type de support et en tout lieu.</strong>
     Ces technologies facilitent l'évolutivité de nos applications, nous permettant de les enrichir très rapidement en nouvelles fonctionnalités et de créer facilement de nouvelles applications.
   </p>
+  <p class="d-flex justify-content-around flex-wrap mt-3" >
+    <img src="{{page.logo_docker}}" alt="logo docker" class="img-logo-xl m-2" >
+    <img src="{{page.logo_reactjs}}" alt="logo react js" class="img-logo-xl m-2" >
+    <img src="{{page.logo_rails}}" alt="logo ruby on rails" class="img-logo-xl m-2" >
+  </p>
 </div>
 
 <div class="jumbotron py-4">
   <h4 class="xylosuite-title"><i class="fas fa-hard-hat mr-2"></i>Adaptée</h4>
-  <p>
-    <strong>Nous vous fournissons un service à la fois prêt à l’emploi et personnalisable.</strong>
-    Au besoin, nous pouvons intégrer des modules spécifiques à votre entreprise pour mieux répondre à vos contraintes de production.
-  </p>
+  <div class="container p-0">
+    <div class="row">
+       <div class="col-sm-12 col-md-6 mb-2"> 
+        <img src="{{page.illustration2}}" alt="des logiciels adaptés aux processus" class=".img-fluid w-100" >
+      </div>
+      <div class="col-sm-12 col-md-6"> 
+        <p>
+          <strong>Nous vous fournissons un service à la fois prêt à l’emploi et personnalisable.</strong>
+          Au besoin, nous pouvons intégrer des modules spécifiques à votre entreprise pour mieux répondre à vos contraintes de production.
+        </p>
+      </div>
+    </div>
+  </div>
+  
 </div>
 
 <div class="jumbotron py-4">
@@ -74,13 +96,24 @@ excerpt: |
   <p>
     Grâce à un système de mise en cache automatisé, <strong>nos applications sont utilisables partout</strong>, même en forêt, même sans réseau.
   </p>
+  <p class="d-flex justify-content-around flex-wrap mt-3">
+    <img src="{{page.illustration4}}" alt="machine abattage" class="img-fluid h-100 m-2" style="max-height: 135px;" >
+    <img src="{{page.illustration3}}" alt="pas de réseau" class="img-fluid m-2" style="height: 135px;">
+    <img 
+      src="{{page.illustration6}}"
+      alt="application mobile de cartographie forestière" 
+      class="img-fluid h-100 m-2" 
+      style="max-height: 135px;"
+      >
+    <img src="{{page.illustration5}}" alt="pile de bois" class="img-fluid h-100 m-2" style="max-height: 135px;">
+  </p>
 </div>
 
 <div class="jumbotron py-4">
   <h4 class="xylosuite-title"><i class="fas fa-lock mr-2"></i>Robuste et sécurisée</h4>
   <div class="container p-0">
     <div class="row">
-      <div class="col col-8"> 
+      <div class="col-sm-12 col-md-8"> 
         <p>
           L’architecture de nos serveurs et de nos applications garantit une haute disponibilité de nos services.
         </p>
@@ -91,7 +124,7 @@ excerpt: |
           Nos applications bénéficient d’une <strong>triple sécurité</strong> (ssl, base de donnée chiffrée, jeton unique de connexion chiffré) maximisant l’intégrité de nos services.
         </p>
       </div>
-      <div class="col col-4 mb-2"> 
+      <div class="col-sm-12 col-md-4 mb-2"> 
         <img src="{{page.login_pwd}}" alt="page connexion" class="img-fluid">
       </div>
     </div>
@@ -112,9 +145,9 @@ excerpt: |
   </p>
 </div>
 
-
 ## L'innovation logicielle au service de l'exploitation forestière
 {: .xylosuite-title #applis}
+
 #### 6 applications interconnectées
 {: .xylosuite-title .mb-4}
 
@@ -131,7 +164,7 @@ excerpt: |
         <div class="mb-3">
           <a href="{{ p.url | prepend: site.baseurl }}" class="text-dark">
             <h3 class="xylosuite-title mb-0 pb-0"><i class="fas fa-chevron-right mr-1"></i> {{p.title}}</h3>
-            <p>{{p.excerpt}}</p>
+            <p>{{p.subtitle}}</p>
           </a>
         </div>
       {% endfor %}
