--- a/collections/_xylosuite/2021-12-22-stocks.md
+++ b/collections/_xylosuite/2021-12-22-stocks.md
@@ -7,19 +7,19 @@ date: 2019-12-01 16:34:53 +0100
 thumb: /img/xylosuite.png
 description: "Logiciel de gestion des stocks de bois bord de route"
 stocks: /img/techno-stocks.jpg
-excerpt: "Logiciel de suivi et de prévision des stocks de bois bord de route"
+subtitle: "Logiciel de suivi et de prévision des stocks de bois bord de route"
 specs:
-  - Analyse des stocks en temps réel
-  - Cartographie des stocks
+  - Analyse des stocks de bois en temps réel
+  - Cartographie des dépôts de bois bord de route et de leurs stocks
   - Evolution sur les derniers mois
-  - Prévision des stocks en fonction des activités planifiées et des commandes en cours
+  - Prévision des stocks en fonction des activités d'exploitation forestière planifiées et des commandes en cours
 ---
 
 ![xylosuite logo]({{page.thumb}}){: .img-fluid .img-logo}
 
 ### <a href='./intro#applis' class="text-dark"><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
 {: .xylosuite-title}
-##### <strong>{{ page.excerpt }} </strong>
+##### <strong>{{ page.subtitle }} </strong>
 {: .xylosuite-title}
 
 <ul class="list-group my-4">
