--- a/collections/_xylosuite/2022-12-22-terrain.md
+++ b/collections/_xylosuite/2022-12-22-terrain.md
@@ -11,7 +11,7 @@ carte_chantier: /img/techno-carto_chantier.png
 stocks: /img/techno-stocks.jpg
 saisie_inventaire: /img/techno-appli_terrain.png
 login_pwd: /img/techno-login_pwd.png
-excerpt: "Application mobile d'exploitation forestière et de suivi des stocks de billons ou grumes"
+subtitle: "Application mobile d'exploitation forestière et de suivi des stocks de billons ou grumes"
 specs:
   - Recherche des chantiers multicritères (dont géographique)
   - Transmission des chantiers en cours aux ETF
@@ -26,19 +26,19 @@ specs:
 
 ### <a href='./intro#applis' class="text-dark"><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
 {: .xylosuite-title}
-##### <strong>{{ page.excerpt }} </strong>
+##### <strong>{{ page.subtitle }} </strong>
 {: .xylosuite-title}
 
 <div class="container p-0 mt-4">
   <div class="row">
-    <div class="col col-9">
-    <ul class="list-group ">
-    {% for item in page.specs %}
-      <li class="list-group-item">{{item}}</li>
-    {% endfor %}
-    </ul> 
+    <div class="col-12 col-md-9">
+      <ul class="list-group ">
+      {% for item in page.specs %}
+        <li class="list-group-item">{{item}}</li>
+      {% endfor %}
+      </ul> 
     </div>
-    <div class="col col-3" >
+    <div class="col-12 col-md-3 mb-2 mt-3 mt-md-0 mt-lg-0">
       <img src="{{page.saisie_inventaire}}" alt="saisie inventaire" class="img-fluid">
     </div>
   </div>  
