--- a/collections/_xylosuite/2023-12-22-achat.md
+++ b/collections/_xylosuite/2023-12-22-achat.md
@@ -11,7 +11,7 @@ carte_chantier: /img/techno-carto_chantier.png
 stocks: /img/techno-stocks.jpg
 saisie_inventaire: /img/techno-appli_terrain.png
 login_pwd: /img/techno-login_pwd.png
-excerpt: "Logiciel d'optimisation des achats de bois sur pied"
+subtitle: "Logiciel d'optimisation des achats de bois sur pied"
 specs:
   - Aide à la proposition d’offres d’achat,
   - Analyse des écarts au marché,
@@ -24,7 +24,7 @@ specs:
 
 ### <a href='./intro#applis' class="text-dark"><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
 {: .xylosuite-title}
-##### <strong>{{ page.excerpt }} </strong>
+##### <strong>{{ page.subtitle }} </strong>
 {: .xylosuite-title}
 (développement en cours)
 
