design update, new content, debug

--- a/collections/_actus/2019-12-20-bilan-2019.md
+++ b/collections/_actus/2019-12-20-bilan-2019.md
@@ -5,9 +5,11 @@ thumb: /img/2019-12-20-bilan2019.png
 date: 2019-12-20 16:34:53 +0100
 img1: /img/2019-12-20-appli_transport.png
 category: xylolink
+excerpt_separator: <!--more-->
 tags:
   - bilan
   - perspectives
+  - XyloSuite
 ---
 
 ![bilan]({{page.thumb}}){: .img-fluid }
@@ -21,6 +23,7 @@ tags:
       Nous avons comme prévu développé le module transport et réalisé sa mise en production, en particulier <strong>l'outil d'aide à la création de commandes de transport.</strong>
     </p> 
   </div>
+  <!--more-->
   <div itemprop="articleBody">
     <p>
       Cet outil unique permet de <strong>construire rapidement une commande de transport en facilitant la recherche des stocks pour répondre au mieux aux commandes des clients.</strong> Sa force réside dans un système de recherche des stocks suivant leur typologie (produits, origines) et leur position géographique. Deux clics suffisent à ajouter une ligne à votre commande. Les stocks s'actualisent automatiquement permettant de contrôler l'impact des transports à venir instantanément.
