--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -18,9 +18,7 @@ carte_chantier: /img/techno-carto_chantier.png
 stocks: /img/techno-stocks.jpg
 saisie_inventaire: /img/techno-appli_terrain.png
 login_pwd: /img/techno-login_pwd.png
-subtitle: |
-  Une solution complète pour 
-  planifier – piloter – maîtriser l’approvisionnement en bois rond
+subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnement en bois
 ---
 
 ![xylosuite logo]({{page.thumb}}){: .img-thumbnail}
