change links style

--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -159,10 +159,12 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   <div>
       {% assign sPages = site.xylosuite | where_exp: 'item', "item.title != 'Présentation'" | sort: 'level' %}
       {% for p in sPages %}
-        <div class="mb-3">
+        <div class="m-2">
           <a href="{{ p.url | prepend: site.baseurl }}" class="text-dark">
-            <h3 class="xylosuite-title mb-0 pb-0"><i class="fas fa-chevron-right mr-1"></i> {{p.title}}</h3>
-            <p>{{p.subtitle}}</p>
+            <div class="py-2">
+              <h3 class="xylosuite-title mb-0 pb-0"><i class="fas fa-chevron-right mr-1"></i> {{p.title}}</h3>
+              <p class="p-0 m-0">{{p.subtitle}}</p>
+            </div>            
           </a>
         </div>
       {% endfor %}
