--- a/collections/_xylosuite/2022-12-22-terrain.md
+++ b/collections/_xylosuite/2022-12-22-terrain.md
@@ -24,7 +24,7 @@ specs:
 
 ![xylosuite logo]({{page.thumb}}){: .img-fluid .img-logo}
 
-### <a href='./intro#applis' class="text-dark"><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
+### <a href='./intro#applis' class=""><i class="fas fa-chevron-left mr-2"></i>{{page.fullTitle}}</a>
 {: .xylosuite-title}
 ##### <strong>{{ page.subtitle }} </strong>
 {: .xylosuite-title}
