--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -33,7 +33,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
 <div itemscop itemtype="http://schema.org/WebApplication" class="jumbotron py-2">
   <div itemprop="about">
     <p class="">
-      <strong>Nos activités initiales</strong> – la consultance en logistique et le développement d’applications à destination de la filière bois – <strong>ont mis en évidence une demande forte en outils fiables de planification et suivi de l’approvisionnement en bois rond.</strong>
+      <strong>Nos activités initiales</strong> – la consultance en logistique et le développement d’applications à destination de la filière bois – <strong>ont mis en évidence une demande forte en outils fiables de planification et suivi de l’approvisionnement en bois rond,</strong> de la forêt au transformateur.
     </p>
   </div>
   <div>
@@ -155,6 +155,9 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   </p>
   <p class="lead">
     <strong>Chacun à son rythme, chacun à sa manière, XyloSuite n'impose pas un modèle de fonctionnement à ses clients.</strong>
+  </p>
+  <p>
+    Nos clients peuvent ainsi hiérarchiser l'intégration de nos outils, que leur priorité soit la cartographie des chantiers, la gestion des risques, la planification des activités, l'optimisation du transport...
   </p>
   <div>
       {% assign sPages = site.xylosuite | where_exp: 'item', "item.title != 'Présentation'" | sort: 'level' %}
