--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -53,7 +53,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   </div>
 </div>
 
-![xylosuite_1]({{page.illustration1}}){: .img-fluid}
+![métiers couverts par Xylosuite]({{page.illustration1}}){: .img-fluid}
 
 ## Une suite applicative innovante
 {: .xylosuite-title}
@@ -96,7 +96,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   </p>
   <p class="d-flex justify-content-around flex-wrap mt-3">
     <img src="{{page.illustration4}}" alt="machine abattage" class="img-fluid h-100 m-2" style="max-height: 135px;" >
-    <img src="{{page.illustration3}}" alt="pas de réseau" class="img-fluid m-2" style="height: 135px;">
+    <img src="{{page.illustration3}}" alt="hors ligne" class="img-fluid m-2" style="height: 135px;">
     <img 
       src="{{page.illustration6}}"
       alt="application mobile de cartographie forestière" 
@@ -123,7 +123,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
         </p>
       </div>
       <div class="col-sm-12 col-md-4 mb-2"> 
-        <img src="{{page.login_pwd}}" alt="page connexion" class="img-fluid">
+        <img src="{{page.login_pwd}}" alt="page de connexion sécurisée" class="img-fluid">
       </div>
     </div>
   </div>
