update and news

--- a/collections/_actus/2019-12-20-bilan-2019.md
+++ b/collections/_actus/2019-12-20-bilan-2019.md
@@ -15,10 +15,10 @@ tags:
 ![bilan]({{page.thumb}}){: .img-fluid }
 
 <time datetime="2019-12-20"></time>
-<div itemscop itemtype="http://schema.org/TechArticle">
+<div itemscope itemtype="http://schema.org/TechArticle">
   <div itemprop="backstory">
     <p>
-      <strong>2019 a été une année d'enrichissement de notre suite logicielle <a href="/xylosuite/intro">Xylosuite</a> et d'intégration de nouveaux clients.</strong> 
+      <strong>2019 a été une année d'enrichissement de notre suite logicielle <a href="/xylosuite/intro" itemprop="url">Xylosuite</a> et d'intégration de nouveaux clients.</strong> 
     </p><p>
       Nous avons comme prévu développé le module transport et réalisé sa mise en production, en particulier <strong>l'outil d'aide à la création de commandes de transport.</strong>
     </p> 
