--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -30,7 +30,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
 ## l’approvisionnement en bois rond
 {: .xylosuite-title .mb-4}
 
-<div itemscop itemtype="http://schema.org/WebApplication" class="jumbotron py-2">
+<div itemscope itemtype="http://schema.org/WebApplication" class="jumbotron py-2">
   <div itemprop="about">
     <p class="">
       <strong>Nos activités initiales</strong> – la consultance en logistique et le développement d’applications à destination de la filière bois – <strong>ont mis en évidence une demande forte en outils fiables de planification et suivi de l’approvisionnement en bois rond,</strong> de la forêt au transformateur.
