--- a/collections/_xylosuite/2022-12-22-terrain.md
+++ b/collections/_xylosuite/2022-12-22-terrain.md
@@ -10,16 +10,20 @@ illustration1: /img/techno-metier_xylosuite.png
 carte_chantier: /img/techno-carto_chantier.png
 stocks: /img/techno-stocks.jpg
 saisie_inventaire: /img/techno-appli_terrain.png
+img_secu: /img/techno-terrain_secu.png
 login_pwd: /img/techno-login_pwd.png
 subtitle: "Application mobile d'exploitation forestière et de suivi des stocks de billons ou grumes"
 specs:
   - Recherche des chantiers multicritères (dont géographique)
   - Transmission des chantiers en cours aux ETF
   - Description du chantier
-  - Carte détaillée
+  - Carte détaillée, catalogue des fonds de l'IGN
+  - Edition cartographique depuis le smartphone
   - Transmission des ordres de production
   - Suivi des stocks
+  - Fiche sécurité chantier dématérialisée (et téléchargeable au format PDF)
   - Saisies des inventaires et acquittement de production
+  - Un accès spécifique aux ETF, avec des droits d'édition limités
 ---
 
 ![xylosuite logo]({{page.thumb}}){: .img-fluid .img-logo}
@@ -29,17 +33,20 @@ specs:
 ##### <strong>{{ page.subtitle }} </strong>
 {: .xylosuite-title}
 
+
+<ul class="list-group ">
+{% for item in page.specs %}
+  <li class="list-group-item">{{item}}</li>
+{% endfor %}
+</ul> 
+
 <div class="container p-0 mt-4">
   <div class="row">
-    <div class="col-12 col-md-9">
-      <ul class="list-group ">
-      {% for item in page.specs %}
-        <li class="list-group-item">{{item}}</li>
-      {% endfor %}
-      </ul> 
+    <div class="col-12 col-md-3 mb-2 mt-3 mt-md-0 mt-lg-0">
+      <img src="{{page.saisie_inventaire}}" alt="saisie inventaire" class="img-fluid mb-3">      
     </div>
     <div class="col-12 col-md-3 mb-2 mt-3 mt-md-0 mt-lg-0">
-      <img src="{{page.saisie_inventaire}}" alt="saisie inventaire" class="img-fluid">
+      <img src="{{page.img_secu}}" alt="fiche sécurité" class="img-fluid">
     </div>
   </div>  
 </div>
