--- a/collections/_xylosuite/2023-12-22-achat.md
+++ b/collections/_xylosuite/2023-12-22-achat.md
@@ -12,11 +12,26 @@ stocks: /img/techno-stocks.jpg
 saisie_inventaire: /img/techno-appli_terrain.png
 login_pwd: /img/techno-login_pwd.png
 subtitle: "Logiciel d'optimisation des achats de bois sur pied"
+img1: /img/techno-tarif_cubage.png
+img2: /img/techno-proposition_achat.png
 specs:
-  - Aide à la proposition d’offres d’achat,
-  - Analyse des écarts au marché,
-  - Historique des transactions,
-  - Observatoire géographiques des prix du marché.
+  - title: Prospection de nouveaux lots
+    details: 
+      - Identification de nouveaux lots depuis le terrain
+      - Recherche des informations cadastrales
+      - Description détaillée du lot
+      - Association du lot à une offre
+  - title: Aide à la proposition d’offres d’achat
+    details: 
+      - Gestion lot par lot (plusieurs lots par offre)
+      - Intégration de tout type de tarif de cubage
+      - Ventilation automatique des qualités
+      - Gestion des grilles de prix (prestations et ventes de bois)
+      - Calcul des coûts et des recettes semi-automatisé
+      - Edition des contrats et documents administratifs obligatoires au format PDF
+  - title: Analyse des écarts au marché (en cours de développement)
+  - title: Historique des transactions (en cours de développement)
+  - title: Observatoire géographique des prix du marché (en cours de développement)
 ---
 
 ![xylosuite logo]({{page.thumb}}){: .img-fluid .img-logo}
@@ -26,11 +41,33 @@ specs:
 {: .xylosuite-title}
 ##### <strong>{{ page.subtitle }} </strong>
 {: .xylosuite-title}
-(développement en cours)
 
-<ul class="list-group mt-4">
+<ul class="list-group ">
 {% for item in page.specs %}
-  <li class="list-group-item">{{item}}</li>
+  <li class="list-group-item">
+  <div>{{item.title}}</div>
+  {% if item.details %}
+    {% for detail in item.details %}
+      <div>
+        <small class="text-muted">
+          {% if item.innovation %} <i class="fas fa-lightbulb mr-1"></i> {% endif %}
+          {{detail}}
+        </small>
+      </div>
+    {% endfor %}
+  {% endif %}</li>
 {% endfor %}
 </ul>
+
+
+<div class="container p-0 mt-4">
+  <div class="row">
+    <div class="col-12 col-md-8">  
+      <img src="{{page.img1}}" alt="cubage des bois sur pied" class="img-fluid">
+    </div>
+    <div class="col-12 col-md-4 mb-2 mt-3 mt-md-0 mt-lg-0">
+      <img src="{{page.img2}}" alt="proposition achat" class="img-fluid">
+    </div>
+  </div>  
+</div>
 
