--- a/collections/_references/2015-12-22-ESB.md
+++ b/collections/_references/2015-12-22-ESB.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Ecole du bois"
 date:   2015-12-22 16:34:53 +0100
-thumb: /img/logo-esb.png
+thumb: /img/logo-esb.svg
 link: http://www.ecoledubois.fr/
 ---
 
