--- a/collections/_references/2015-12-22-IUTPU.md
+++ b/collections/_references/2015-12-22-IUTPU.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "IMS - Université de Bordeaux"
+title:  "Université de Pau et des Pays de l'Adour"
 date:   2015-12-22 16:34:53 +0100
 thumb: /img/Université_Pau_Pays_de_l'Adour_logo_2014.png
 link: https://iutpa.univ-pau.fr/fr/formations/offre-de-formation/licence-professionnelle-13/sciences-technologies-sante-STS/licence-pro-metiers-du-bois-50_1/qualite-dans-les-industries-du-bois-exploitation-et-commercialisation-du-bois-84_1.html
