minor changes in xylosuite files

--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -136,8 +136,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   </p><p>
     <em>Chaque client possède sa propre base de données herbergée sur son propre cloud</em>
   </p><p>
-    Nos applications peuvent se connecter à votre propre système d’informations via différents canaux sécurisés (VPN, API, Import/Export).
-    En 2020 nos applications seront interopérables avec les logiciels des transporteurs de bois.
+    Nos applications peuvent se connecter à votre propre système d’informations via différents canaux sécurisés (VPN, API, Import/Export, transferts par email).
   </p><p>
     Cette interconnexion nous permet de <strong>tracer le flux de matière depuis l'achat des bois sur pied jusqu'à livraison au client</strong>.  
   </p>
