--- a/collections/_xylosuite/2023-12-22-achat.md
+++ b/collections/_xylosuite/2023-12-22-achat.md
@@ -14,7 +14,7 @@ login_pwd: /img/techno-login_pwd.png
 subtitle: "Logiciel d'optimisation des achats de bois sur pied"
 img1: /img/techno-tarif_cubage.png
 img2: /img/techno-proposition_achat.png
-specs:
+specs:  
   - title: Prospection de nouveaux lots
     details: 
       - Identification de nouveaux lots depuis le terrain
@@ -23,8 +23,10 @@ specs:
       - Association du lot à une offre
   - title: Aide à la proposition d’offres d’achat
     details: 
+      - Visualisation cartographique et interactive de toutes les offres
       - Gestion lot par lot (plusieurs lots par offre)
       - Intégration de tout type de tarif de cubage
+      - Gestion multi-essence, possibilités de réaliser différents scénarios d'estimation
       - Ventilation automatique des qualités
       - Gestion des grilles de prix (prestations et ventes de bois)
       - Calcul des coûts et des recettes semi-automatisé
