feat: css update, xylosuite intro update

--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -23,11 +23,16 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
 
 ![xylosuite logo]({{page.thumb}}){: .img-thumbnail}
 
-## Une solution complète pour
+# Une solution complète pour
+
 {: .xylosuite-title .mb-0}
-## **planifier – piloter – maîtriser**
+
+# **planifier – piloter – maîtriser**
+
 {: .xylosuite-title .mb-0}
-## l’approvisionnement en bois rond
+
+# l’approvisionnement en bois rond
+
 {: .xylosuite-title .mb-4}
 
 <div itemscope itemtype="http://schema.org/WebApplication" class="jumbotron py-2">
@@ -56,6 +61,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
 ![métiers couverts par Xylosuite]({{page.illustration1}}){: .img-fluid}
 
 ## Une suite applicative innovante
+
 {: .xylosuite-title}
 
 <div class="jumbotron py-4">
@@ -142,10 +148,34 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   </p>
 </div>
 
+<div class="jumbotron py-4">
+  <h4 class="xylosuite-title"><i class="fas fa-gavel mr-2"></i>Conforme</h4>
+  <p class="lead mb-1">
+    Nos applications sont un soutien à la mise en conformité de l'ensemble de leurs activités de mobilisation des bois sur pied.
+  </p>
+  <p>Nos utilisateurs peuvent <strong>générer l'ensemble des contrats et déclarations administratives</strong> en quelques clics. Ces documents sont entièrement personnalisables.
+  </p>
+  <p>
+    À partir des informations de réception et de livraison déjà collectées dans le cadre du suivi de chantier, <strong>XyloSuite simplifie considérablement le processus de facturation</strong>, tant pour les achats que pour les ventes. Pour garantir une parfaite conformité avec les exigences légales en vigueur, nous proposons des interfaces avec des logiciels tiers spécialisés dans la gestion de la facturation.
+  </p>
+    <h5><i class="fas fa-tree mr-2"></i>Mise en conformité RDUE</h5>
+  <p>
+    Depuis juin 2024, XyloSuite est connecté à la plateforme <strong>TRACES</strong>, facilitant la déclaration des bois importés conformément à la <strong>Réglementation de l'Union Européenne sur le Bois (RDUE)</strong>.
+  </p>
+  <p>
+    Nous travaillons actuellement à la mise en place de solution automatisée de communications des codes RDUE entre partenaires en collaboration avec nos utilisateurs.
+  </p>
+  <p>
+    Par ailleurs, nous mettons à disposition des fournisseurs en bois rond de nos clients transformateurs, une plateforme leur permettant de déclarer directement les codes RDUE associés à leurs livraisons.
+  </p>
+</div>
+
 ## L'innovation logicielle au service de l'exploitation forestière
+
 {: .xylosuite-title #applis}
 
 #### 6 applications interconnectées
+
 {: .xylosuite-title .mb-4}
 
 <div class="jumbotron py-4">
