--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -92,7 +92,6 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
       </div>
     </div>
   </div>
-  
 </div>
 
 <div class="jumbotron py-4">
@@ -110,6 +109,36 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
       style="max-height: 135px;"
       >
     <img src="{{page.illustration5}}" alt="pile de bois" class="img-fluid h-100 m-2" style="max-height: 135px;">
+  </p>
+</div>
+
+<div class="jumbotron py-4">
+  <h4 class="xylosuite-title"><i class="fas fa-lightbulb mr-2"></i>Innovante</h4>
+  <p>
+    Nos algorithmes à horizon roulant allient suivi en temps réel et optimisation prédictive pour répondre simultanément aux enjeux économiques et environnementaux de votre exploitation.
+  </p>
+
+  <h5><strong>Performance logistique et économique</strong></h5>
+  <p>
+    Nos modules automatisent la <strong>programmation des activités</strong> et génèrent en quelques clics des <strong>scénarios chiffrés</strong> (volumes, coûts, marges), <strong>recadrés en continu</strong> sur l’avancement réel du chantier pour maximiser votre rentabilité. 
+  </p>
+  <h5><strong>Responsabilité environnementale</strong></h5>
+  <p>
+  Dès la planification, toutes les contraintes sylvicoles, réglementaires et logistiques sont intégrées pour limiter les impacts sur le l'environnement, ajuster précisément les volumes extraits à la demande réelle, maîtriser les risques de sur-stock et prévenir la sur-extraction.
+  </p>
+  <p class="d-none">
+    Nos solutions offrent de nouvelles possibilités d'optimisation de la valorisation des bois. En effet, nous intégrons une approche innovante de planification à horizon roulant. Il suffit de programmer l'activité de vos équipes en quelques clics pour obtenir une prévision de production qui s'actualise au fil de l'avancement réel du chantier. C'est le concept de "forêt atelier" : en intégrant les concepts d'optimisation de l'atelier de production, nos solutions facilitent une valorisation optimale de la matière. Les prix d'achat sont calculés au mieux pour assurer l'équilibre économique du chantier. L'activité est planifiée et recadrée en fonction des contraintes multiplent qui ponctuent tout chantier d'exploitation forestière. Le bois est mobilisé pour répondre à la demande en réduisant les risques de sur-stocks et de pénurie. Ces solutions facilitent l'identification des aléas, la détection des incidents au plus vite et la recherche de solutions alternatives en cas de dérive incontournable.
+  </p>
+  <p class="d-flex justify-content-around flex-wrap mt-3">
+    <!-- <img src="{{page.illustration4}}" alt="machine abattage" class="img-fluid h-100 m-2" style="max-height: 135px;" >
+    <img src="{{page.illustration3}}" alt="hors ligne" class="img-fluid m-2" style="height: 135px;">
+    <img 
+      src="{{page.illustration6}}"
+      alt="application mobile de cartographie forestière" 
+      class="img-fluid h-100 m-2" 
+      style="max-height: 135px;"
+      >
+    <img src="{{page.illustration5}}" alt="pile de bois" class="img-fluid h-100 m-2" style="max-height: 135px;"> -->
   </p>
 </div>
 
