fix: xls new content

--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -5,7 +5,8 @@ level: 0
 date: 2019-12-01 16:34:53 +0100
 thumb: /img/xylosuite.png
 description: "Logiciel d'exploitation forestière, applications pour l'approvisionnement en bois"
-illustration1: /img/techno-carto_applis.png
+illustration1: /img/XLS_flux_matiere.png
+illustration_applis: /img/techno-carto_applis.png
 illustration2: /img/techno-processus.png
 illustration3: /img/techno-no_network.svg
 illustration4: /img/ponsse.jpg
@@ -13,6 +14,7 @@ illustration5: /img/log_air.jpg
 illustration6: /img/techno-appli_terrain.png
 illustration_suivi: /img/XLS_analyse_ecart_previsions.png
 illustration_eco: /img/XLS_planif_roulante.png
+illustration_eudr: /img/XLS_EUDR.png
 logo_rails: /img/logo-rails.png
 logo_docker: /img/logo-docker.png
 logo_reactjs: /img/logo-react.png
@@ -59,8 +61,9 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
     </p>
   </div>
 </div>
-
-![métiers couverts par Xylosuite]({{page.illustration1}}){: .img-fluid}
+<p class="d-flex justify-content-around flex-wrap mt-3" >
+  <img src="{{page.illustration1}}" alt="métiers couverts par Xylosuite" class="img-fluid" style="max-height: 300px" >
+</p>
 
 ## Une suite applicative innovante
 
@@ -137,10 +140,6 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   <p class="d-none">
     Nos solutions offrent de nouvelles possibilités d'optimisation de la valorisation des bois. En effet, nous intégrons une approche innovante de planification à horizon roulant. Il suffit de programmer l'activité de vos équipes en quelques clics pour obtenir une prévision de production qui s'actualise au fil de l'avancement réel du chantier. C'est le concept de "forêt atelier" : en intégrant les concepts d'optimisation de l'atelier de production, nos solutions facilitent une valorisation optimale de la matière. Les prix d'achat sont calculés au mieux pour assurer l'équilibre économique du chantier. L'activité est planifiée et recadrée en fonction des contraintes multiplent qui ponctuent tout chantier d'exploitation forestière. Le bois est mobilisé pour répondre à la demande en réduisant les risques de sur-stocks et de pénurie. Ces solutions facilitent l'identification des aléas, la détection des incidents au plus vite et la recherche de solutions alternatives en cas de dérive incontournable.
   </p>
-  <p class="d-flex justify-content-around flex-wrap mt-3">
-    <img src="{{page.illustration_suivi}}" alt="planification roulante du chantier" class="img-fluid h-100 m-2" style="max-height: 135px;" >
-    <img src="{{page.illustration_eco}}" alt="bilan éco intermédiaire" class="img-fluid m-2" style="height: 190px;">
-  </p>  
 </div>
 
 <div class="jumbotron py-4">
@@ -198,13 +197,19 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   <p>
     Par ailleurs, nous mettons à disposition des fournisseurs en bois rond de nos clients transformateurs, une plateforme leur permettant de déclarer directement les codes RDUE associés à leurs livraisons.
   </p>
+  <div class="col-sm-12 col-md-12 mt-2 p-0"> 
+    <img src="{{page.illustration_eudr}}" alt="suivi des déclarations RDUE" class="img-fluid">
+  </div>
 </div>
 
 ## L'innovation logicielle au service de l'exploitation forestière
 
 {: .xylosuite-title #applis}
 
-#### 6 applications interconnectées
+#### 8 applications interconnectées
+
+![applications Xylosuite]({{page.illustration_applis}}){: .img-fluid}
+
 
 {: .xylosuite-title .mb-4}
 
