--- a/collections/_xylosuite/2023-12-22-achat.md
+++ b/collections/_xylosuite/2023-12-22-achat.md
@@ -6,14 +6,10 @@ level: 1
 date: 2019-12-01 16:34:53 +0100
 thumb: /img/xylosuite.png
 description: "Logiciel et application mobile d'optimisation des achats de bois sur pied"
-illustration1: /img/techno-metier_xylosuite.png
-carte_chantier: /img/techno-carto_chantier.png
-stocks: /img/techno-stocks.jpg
-saisie_inventaire: /img/techno-appli_terrain.png
-login_pwd: /img/techno-login_pwd.png
 subtitle: "Logiciel d'optimisation des achats de bois sur pied"
-img1: /img/techno-tarif_cubage.png
-img2: /img/techno-proposition_achat.png
+img1: /img/XLS_table_lapasse.png
+img2: /img/XLS_stock_BSP.png
+img3: /img/XLS_etude_eco.png
 specs:  
   - title: Prospection de nouveaux lots
     details: 
@@ -63,12 +59,15 @@ specs:
 
 
 <div class="container p-0 mt-4">
-  <div class="row">
-    <div class="col-12 col-md-8">  
+  <div class="row justify-content-between">
+    <div class="col-12 col-md-5 p-2">  
       <img src="{{page.img1}}" alt="cubage des bois sur pied" class="img-fluid">
     </div>
-    <div class="col-12 col-md-4 mb-2 mt-3 mt-md-0 mt-lg-0">
-      <img src="{{page.img2}}" alt="proposition achat" class="img-fluid">
+    <div class="col-12 col-md-7 p-2">
+      <img src="{{page.img2}}" alt="stock sur pied" class="img-fluid">
+    </div>
+    <div class="col-12 col-md-10 p-2">
+      <img src="{{page.img3}}" alt="pro-position achat" class="img-fluid">
     </div>
   </div>  
 </div>
