--- a/collections/_xylosuite/2023-12-22-achat.md
+++ b/collections/_xylosuite/2023-12-22-achat.md
@@ -12,8 +12,9 @@ stocks: /img/techno-stocks.jpg
 saisie_inventaire: /img/techno-appli_terrain.png
 login_pwd: /img/techno-login_pwd.png
 subtitle: "Logiciel d'optimisation des achats de bois sur pied"
-img1: /img/techno-tarif_cubage.png
-img2: /img/techno-proposition_achat.png
+img1: /img/XLS_table_lapasse.png
+img2: /img/XLS_stock_BSP.png
+img3: /img/XLS_etude_eco.png
 specs:  
   - title: Prospection de nouveaux lots
     details: 
@@ -64,11 +65,16 @@ specs:
 
 <div class="container p-0 mt-4">
   <div class="row">
-    <div class="col-12 col-md-8">  
-      <img src="{{page.img1}}" alt="cubage des bois sur pied" class="img-fluid">
+    <div class="col-12 col-md-6">  
+      <img src="{{page.img1}}" alt="tarif de cubage" class="img-fluid">
     </div>
-    <div class="col-12 col-md-4 mb-2 mt-3 mt-md-0 mt-lg-0">
-      <img src="{{page.img2}}" alt="proposition achat" class="img-fluid">
+    <div class="col-12 col-md-6 mb-2 mt-3 mt-md-0 mt-lg-0">
+      <img src="{{page.img2}}" alt="cubage des bois sur pied" class="img-fluid">
+    </div>
+  </div>  
+  <div class="row mt-1">    
+    <div class="col-12 col-md-12 mb-2 mt-3 mt-md-0 mt-lg-0">
+      <img src="{{page.img3}}" alt="proposition achat" class="img-fluid">
     </div>
   </div>  
 </div>
